<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overwrite_header"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/heading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_override"
            android:layout_alignParentRight="true"
            android:layout_below="@id/heading"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/warning"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_yes"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_no"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>